2006-12-28  Derek Scherger  <derek@echologic.com>

	* tests/missing_empty_dir/__driver__.lua: new test for missing,
	empty, versioned directories 
	* testsuite.lua: call it
	* work.cc (update_current_roster_from_filesystem): abort if there
	are missing directories, whether they contained files or
	not. tweak the associated messages so they're a bit more specific
	about missing things verses things that are not what they should
	be, like files that should be directories and vice-versa.
	
2006-12-27  Richard Levitte  <richard@levitte.org>

	* NEWS: Date the release.

2006-12-27  Richard Levitte  <richard@levitte.org>

	* configure.ac, debian/changelog, monotone.spec,
	win32/monotone.iss, visualc/config.h: Bumped to version 0.32.

2006-12-27  Richard Levitte  <richard@levitte.org>

	* UPGRADE: Gently remind people to take a backup before migrating.

2006-12-27  Richard Levitte  <richard@levitte.org>

	* contrib/monotone-notify.pl: For all places where 'mtn log' is
	used, change '--revision' to '--from'.

2006-12-27  Matthew Gregan  <kinetik@orcon.net.nz>

	* UPGRADE: Update for 0.32.

	* netsync.cc (struct session): Fix a very minor warning: const
	static vs static const.

2006-12-26  Derek Scherger  <derek@echologic.com>

	* netsync.cc:
	* roster.hh:
	* work.{cc,hh}: fix some comment typos

2006-12-26  Derek Scherger  <derek@echologic.com>

	* unix/process.cc (is_executable, make_executable, process_spawn,
	process_spawn, redir, process_wait, process_kill, process_sleep,
	get_process_id): fix indentation

2006-12-26  Matthew Gregan  <kinetik@orcon.net.nz>

	* Makefile.am (BOTAN_SOURCES): Remove entries for missing headers,
	add entries for new headers.

	* Makefile.am (BOTAN_SOURCES): distcheck target is failing because
	the headers for Botan are missing.  Add missing line continuation.

2006-12-22  Derek Scherger  <derek@echologic.com>

	* paths.cc (normalize_external_path): factor new function out of
	file_path constructor's external path normalization code