@@ -1,5 +1,11 @@
 2006-12-28  Derek Scherger  <derek@echologic.com>
 
+	* tests/checkout_clobbers_workspace/__driver__.lua: new test to
+	see how checkout handles various workspace conflicts
+	* testsuite.lua: call it
+	
+2006-12-28  Derek Scherger  <derek@echologic.com>
+
 	* tests/missing_empty_dir/__driver__.lua: new test for missing,
 	empty, versioned directories 
 	* testsuite.lua: call it
